# OmniAgent

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKATHON.md  HACKATHON_SUBMISSION.md  LICENSE  RAILWAY.md  README.md  SECURITY.md  SECURITY_HARDENING.md  hardhat.config.js  package-lock.json  package.json  pnpm-lock.yaml  railway.json  railway.toml  render.yaml  test-proof.sh  test_log.js  tsconfig.json
backend/: .dockerignore  .env.example  CLOUDFLARE_CI.md  Dockerfile  MASTER_AUDIT_LOG.json  README.md  TEST-ROBOT-FLEET.md  _worker.js  _worker.ts  hardhat.config.js  opencode.json  package.json  pnpm-lock.yaml  pyproject.toml  railway.json  test-all-tools.sh  test-chat-synthesis-v2.sh  test-robot-fleet-integration.sh  test-zk-gate-verifier.ts  test-zk-integration.ts  tsconfig.json  vitest.config.ts  wrangler.toml
backend/.chats/: default-chat-id.json  session-1773661312252.json  session-1773662436797.json  session-1773662479686.json  session-1773664236016.json  session-1773664544524.json  session-1773664564570.json  test-1773653793.json  test-1773653797.json  test-1773653998.json  test-1773654002.json  test-1773654062.json  test-1773654064.json  test-1773654067.json  test-1773654533.json  test-1773654535.json  test-1773654538.json  test-1773655103.json  test-1773655105.json  test-1773655106.json  test-1773655403.json  test-1773655404.json  test-1773655504.json  test-1773655505.json  test-1773655539.json  test-1773655543.json  test-1773655552.json  test-crypto-1.json  test-crypto-2.json  test-general-1.json  test-vault-1773654082.json  (+5 more)
(+1219 files in other folders)
